# pygen

./: .gitignore  README.md  choice_trie_notes.txt  coverage.sh  multiprocessing_experiment.py  setup.cfg  test_choice_trie.py
.github/workflows/: python-package.yml
docs/: 2021-09-08-notes.txt  2021-09-11-choice-trie.txt  2021-09-12-addr.txt  2021-09-14-incremental.md  2021-10-09-notes.md  2021-10-30-notes.txt
examples/: example.py  opengen-ss-example.py
examples/regression/: dataset.py  dynamic_mh.py
src/pygen/: __init__.py  address.py  change.py  choice_address.py  choice_trie.py  deterministic.py  dists.py  gfi.py  gradients.py
src/pygen/dml/: lang.py  raydml.py
src/pygen/inflib/: importance.py  mcmc.py
src/pygen/types/: list.py
tests/: test_choice_address.py  test_choice_trie.py
tests/dml/: test_branch_stochastic.py  test_compound_args_retval.py  test_compound_retval.py  test_differentiable_det.py  test_hierarchical.py  test_recursive_stochastic.py  test_simple_det.py  test_threading.py
tests/inflib/: test_importance.py  test_mcmc.py
