[metadata]
name = mini-pygen-dml-marcoct
version = 0.0.1
author = Marco Cusumano-Towner
author_email = imarcoam@gmail.com
description = A minimal Gen dynamic modeling language (DML) implementation in PyTorch 
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/probcomp/mini-pygen-dml
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    torch

[options.packages.find]
where = src
